fix: sider css z-index, overflow and transition(#master)

--- a/components/layout/sider.module.scss
+++ b/components/layout/sider.module.scss
@@ -1,13 +1,14 @@
 .sider {
-  overflow-x: auto hidden;
+  overflow: auto;
   position: fixed !important;
   top: 0;
   bottom: 0;
   left: 0;
-  z-index: 3;
+  // 边栏展开的阴影 z 坐标为 3，这里应该大于3
+  z-index: 4;
   .siderbar {
     transition: background var(--transition-time), width var(--transition-time),
-      box-shadow var(--transition-time), width var(--transition-time);
+      box-shadow var(--transition-time), max-width var(--transition-time);
     width: 0px;
     height: 100vh;
     background: var(--background);
@@ -119,5 +120,6 @@
   animation: dimmed-change 0.5s 1 alternate;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
-  z-index: 2;
+  // 文章页面的导航 z 坐标为 2，这里需要大于该值
+  z-index: 3;
 }
